--- a/travel-server/package.json
+++ b/travel-server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "travel-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest --detectOpenHandles",
     "test:coverage": "jest --coverage --detectOpenHandles"
   },
