--- a/travel-client/package.json
+++ b/travel-client/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@redux-devtools/extension": "^3.3.0",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
