--- a/travel-server/package.json
+++ b/travel-server/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest --detectOpenHandles",
-    "test:coverage": "jest --coverage --detectOpenHandles"
+    "test": "jest --verbose --forceExit --coverage --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
